// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default component 1`] = `
<div
  data-terra-clincial-detail-list="true"
>
  <div
    class="list"
  />
</div>
`;

exports[`should render a list 1`] = `
<div
  data-terra-clincial-detail-list="true"
>
  <div
    class="list"
  >
    <div
      class="detail-list-item"
    >
      <p>
        Test
      </p>
    </div>
    <div
      class="detail-list-item"
    >
      <p>
        Test
      </p>
    </div>
  </div>
</div>
`;

exports[`should render a title 1`] = `
<div
  data-terra-clincial-detail-list="true"
>
  <h2
    class="title"
  >
    Title
  </h2>
  <div
    class="list"
  />
</div>
`;

exports[`should render a title and a list 1`] = `
<div
  data-terra-clincial-detail-list="true"
>
  <h2
    class="title"
  >
    Title
  </h2>
  <div
    class="list"
  >
    <div
      class="detail-list-item"
    >
      <p>
        Test
      </p>
    </div>
  </div>
</div>
`;
